# SunShift

./: .gitignore  CLAUDE.md  Makefile  NEXT_SESSION_PROMPT.md  README.md  RESEARCH_SYNTHESIS.md  docker-compose.yml
sunshift/: .env.example  Dockerfile  README.md  TECHNICAL_DECISIONS.md  docker-compose.yml  pyproject.toml
sunshift/.github/workflows/: terraform.yml
sunshift/agent/: collector.py  command_receiver.py  config.py  db.py  main.py
sunshift/backend/: .dockerignore  Dockerfile  main.py  requirements.txt
sunshift/backend/api/: websocket.py
sunshift/backend/core/: config.py  deps.py
sunshift/backend/ml/: data_collector.py  features.py  model.py  predict.py  scheduler.py
sunshift/backend/models/: agent.py  commands.py  metrics.py  prediction.py  scheduler.py
sunshift/backend/services/: batching_service.py  hurricane_shield.py  notification.py  savings.py  scheduler_service.py  window_scoring.py
sunshift/dashboard/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
sunshift/dashboard/tests/: landing-links.test.mjs  waitlist-route.test.mjs  waitlist-storage.test.mjs
sunshift/demo/: __init__.py  __main__.py  cli.py
sunshift/demo/mock_data/: __init__.py  predictions.py  pricing.py  weather.py  workloads.py
sunshift/demo/scenarios/: __init__.py  analytics.py  base.py  hurricane.py  peak_hour.py
sunshift/demo/ui/: __init__.py  ascii_art.py  panels.py  progress.py  tables.py
sunshift/demo/utils/: __init__.py  export.py  timing.py
sunshift/infra/: README.md
sunshift/scripts/: train_model.py
(+109 files in other folders)
