[project]
name = "sunshift"
version = "0.1.0"
description = "AI-Powered Compute Cost Optimizer"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "boto3>=1.35.0",
    "xgboost>=2.1.0",
    "prophet>=1.1.6",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "scikit-learn>=1.6.0",
    "httpx>=0.28.0",
    "websockets>=14.0",
    "psutil>=6.1.0",
    "watchdog>=6.0.0",
    "cryptography>=44.0.0",
    "pyyaml>=6.0.2",
    "anthropic>=0.42.0",
    "mlflow>=2.19.0",
    "google-generativeai>=0.8.6",
    "rich>=13.9.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "moto[s3,dynamodb,events]>=5.0.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[dependency-groups]
dev = [
    "pytest-timeout>=2.4.0",
]
